--- a/CroissantClicker.Common/CroissantClicker.Common.csproj
+++ b/CroissantClicker.Common/CroissantClicker.Common.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Ticker.cs" />
     <Compile Include="UIUpdater.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="AssemblyUpdater.cs" />
     <Compile Include="XMLParser.cs" />
   </ItemGroup>
   <ItemGroup>
